Pushing up the majority of this project, I've been making changes on it now for a week

--- a/game.html
+++ b/game.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz Game Game Page</title>
-    <link rel="stylesheet" href="Assets/style.css">
-    <link rel="stylesheet" href="Assets/game.css">
+    <link rel="stylesheet" href="/Assets/style.css">
+    <link rel="stylesheet" href="/Assets/game.css">
 </head>
 <body>
     <div class="container">
@@ -28,26 +28,27 @@
                         0
                     </h1>
                 </div>
+                <div class="hud-item" id="count"></div>
             </div>
             <h1 id="question">What is the Answer to this Question</h1>
             <div class="choice-container">
                 <p class="choice-prefix">A</p>
-                <p class="choice text" data-number="1">Choice 1</p>
+                <p class="choice-text" data-number="1">Choice 1</p>
             </div>
             <div class="choice-container">
                 <p class="choice-prefix">B</p>
-                <p class="choice text" data-number="2">Choice 2</p>
+                <p class="choice-text" data-number="2">Choice 2</p>
             </div>
             <div class="choice-container">
                 <p class="choice-prefix">C</p>
-                <p class="choice text" data-number="3">Choice 3</p>
+                <p class="choice-text" data-number="3">Choice 3</p>
             </div>
             <div class="choice-container">
                 <p class="choice-prefix">D</p>
-                <p class="choice text" data-number="4">Choice 4</p>
+                <p class="choice-text" data-number="4">Choice 4</p>
             </div>
         </div>
     </div>
-    <script src="Assets/game.js"></script>
+    <script src="/Assets/game.js"></script>
 </body>
 </html>
