--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz Game Home Page</title>
-    <link rel="stylesheet" href="/Assets/style.css">
+    <link rel="stylesheet" href="Assets/style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
 </head>
 <body>
     <div class="container">
         <div id="home" class="flex-column flex-center">
             <h1>Are You Ready?</h1>
-            <a href="/game.html" class="btn">Play</a>
-            <a href="/highscore.html" id="highscore-btn" class="btn">High Scores<i class="fas fa-crown"></i></a>
+            <a href="game.html" class="btn">Play</a>
+            <a href="highscore.html" id="highscore-btn" class="btn">High Scores<i class="fas fa-crown"></i></a>
         </div>
     </div>
 </body>
