--- a/highscore.html
+++ b/highscore.html
@@ -5,18 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz Game High Score Page</title>
-    <link rel="stylesheet" href="/Assets/style.css">
-    <link rel="stylesheet" href="/Assets/highscore.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="highscore.css">
 </head>
 <body>
     <div class="container">
         <div id="highScores" class="flex-center flex-column">
             <h1 id="finalScore">Leaderboard</h1>
             <ul id="highScoresList"></ul>
-            <a href="/" class="btn">Go Home<i class="fas-fa-home"></i></a>
+            <a href="/" class="btn">Go Home</a>
         </div>
     </div>
-    <script src="Assets/highscore.js"></script>
+    <script src="highscore.js"></script>
 </body>
 </html>
