troubleshooting to make local storage work correctly

--- a/end.html
+++ b/end.html
@@ -21,6 +21,6 @@
         <a href="index.html" class="btn">Go Home</a>
         </div>
     </div>    
-    <script src="end.html"></script>
+    <script src="end.js"></script>
 </body>
 </html>
